# memory-management

examples/: CMakeLists.txt
exercises/: CMakeLists.txt  List.cpp  ResourceFactory.cpp
homework/resourceD/: resourceD.cpp
